frontend/src/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply text-2xl text-header-text font-lexend font-semibold;
  }
  h2 {
    @apply text-base text-header-text font-lexend font-semibold;
  }
  h3 {
    @apply text-base text-header-text font-lexend font-semibold;
  }
  p {
    @apply text-body-text font-inter font-medium;
  }
  body {
    @apply text-body-text font-inter font-medium;
  }
}

@layer components {
  .body {
    @apply text-sm;
  }
  .body-small {
    @apply text-xs;
  }
  .card {
    @apply shadow-md rounded-lg border border-black border-opacity-[10%] bg-base-teal;
  }
  .card-h-padding {
    @apply mt-4 ml-4;
  }
  .catalog-pill {
    @apply text-xs px-3 py-1 rounded-2xl flex-grow-0 mx-2;
  }
  .table-2 {
    @apply w-full;
  }
  .table-2 thead tr {
    @apply grid grid-flow-col auto-cols-max justify-between border border-x-0 border-t-0 mt-2;
  }
  .table-2 th {
    @apply body text-grey-4 font-medium;
  }
  .table-2 tbody {
    @apply flex flex-col gap-4 mt-4;
  }
  .table-2 tbody tr {
    @apply grid grid-flow-col auto-cols-max justify-between mr-3;
  }
  .table-2 td {
    @apply body-small my-auto;
  }
  .button {
    @apply bg-teal-3 body text-white py-3 px-3 flex flex-row gap-3 rounded-lg;
  }
}

@layer utilities {
  .font-lexend {
    font-family: "Lexend", sans-serif;
  }
  .font-inter {
    font-family: "Inter", sans-serif;
  }
  /* for Chrome, Safari and Opera */
  .scrollbar::-webkit-scrollbar {
    scrollbar-width: thin;
    scrollbar-color: var(--grey-2) transparent;
  }
  /* for IE, Edge and Firefox */
  .scrollbar {
    scrollbar-width: thin;
    scrollbar-color: var(--grey-2) transparent;
  }
}

